syntax = "proto3";

package url_shorts;

option go_package = "/user";

import "google/protobuf/timestamp.proto";

service User {
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Get(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password_hash = 3;
}

message CreateUserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password_hash = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetUserRequest {
}

message GetUserResponse {
}
